third commit, added all necessary configurations, modified the Requester Controller, services etc.